<resources>
    <string name="app_name">Funzo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="matt_tevin">Matt Tevin</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultQuestion">Can you see this question</string>
    <string name="defaultProgress">0/10</string>
    <string name="optionA">A</string>
    <string name="optionC">C</string>
    <string name="optionB">B</string>
    <string name="optionD">D</string>
    <string name="submit">Submit</string>
</resources>