<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/multipleChoiceFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.MultipleChoiceFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/multipleChoiceLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/multipleChoiceQuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/defaultQuestion"
            android:textColor="#363A43"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/multipleChoiceImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:padding="10dp"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/multipleChoiceProgressBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/multipleChoiceProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0" />

            <TextView
                android:id="@+id/multipleChoiceProgressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/defaultProgress"
                android:textColorHint="#7A8089"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/mcqOptionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_text_background"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/optionA"
            android:textColor="#7A8089"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/mcqOptionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_text_background"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/optionB"
            android:textColor="#7A8089"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/mcqOptionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_text_background"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/optionC"
            android:textColor="#7A8089"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mcqOptionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_text_background"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/optionD"
            android:textColor="#7A8089"
            android:textSize="18sp" />

        <Button
            android:id="@+id/mcqSubmitBtn"
            style="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>

