<!-- res/layout/fragment_true_false.xml -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trueFalseFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/trueFalseLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/trueFalseQuestionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultQuestion"
            android:textSize="18sp" />
        <ImageView
            android:id="@+id/trueFalseImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center"
            android:padding="10dp"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/trueFalseProgressBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/trueFalseProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0" />

            <TextView
                android:id="@+id/trueFalseProgressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/defaultProgress"
                android:textColorHint="#7A8089"
                android:textSize="20sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/trueFalseRadioOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/trueFalseRadioButtonTrue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="True"
                android:checked="true" />

            <RadioButton
                android:id="@+id/trueFalseRadioButtonFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="False"
                android:checked="false" />
        </RadioGroup>

        <Button
            android:id="@+id/trueFalseSubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/submit" />

    </LinearLayout>
</FrameLayout>
